--- a/index.html
+++ b/index.html
@@ -7,22 +7,18 @@
 	<title>Homepage</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 	<link rel="stylesheet" type="text/css" href="csstemplate.css">
-	<!--  When you have a stylesheet you can uncomment the link element above and edit the href to suit your file system and 		point to your CSS sheet -->
 </head>
 
 <body>
 
-	<!-- begin the main section of the homepage -->
-	<div id="*Insert appropriate ID - this will not display on your website*">
+	<div id="title">
 		<h1>Femvertising</h1> 
-		<!-- consider whether any other multi-media elements would be appropriate to achieve your chosen design -->
-	</div>
 	
-	<h3>Links to portfolio pages</h3>
+	</div>
 
 	<div id="menu">
 		<h2>Is this toy advertising sexist or feminist ?</h2>
-		<p>Female in advertising is an old thing but now we also use feminist value to highlight a brand. The aim of this website is to make a difference between sexist or feminist toy advertising.</p>
+		<p>For some time now, we've been hearing about femvertising, the use of feminist values in marketing and advertising. In the scientific literature, one area seems to be forgotten: marketing to children. That's why the aim of this site is to help you recognise sexist or feminist advertising, and therefore inclusive advertising for children's toys.</p>
 		<a href="week1.html">Week 1 tasks</a><br>
 		<a href="week2.html">Week 2 tasks</a><br>
 		<a href="week3.html">Week 3 tasks</a><br>
@@ -30,8 +26,9 @@
 		<a href="week5.html">Week 5 tasks</a><br>
 		<a href="week7.html">Week 7 tasks</a><br>
 		<a href="week8.html">Week 8 tasks</a><br>
-		<a href="underconstruction.html">Week 9 tasks</a><br>
-		<a href="underconstruction.html">Week 10 tasks</a>
+		<a href="week9.html">Week 9 tasks</a><br>
+		<a href="week10.html">Week 10 tasks</a><br>
+		<a href="week11.html">Week 10 tasks</a><br>
 <p>Note the use of an under construction page. This lets you set up the infrastructure of your website but without having links that do not work undermining your design!</p>
 	</div>
 	<!-- end the main section of the homepage -->
