--- a/week1.html
+++ b/week1.html
@@ -4,7 +4,7 @@
 <head>
 	<!-- Use this section for your webpage metadata - more detail https://www.w3schools.com/html/html_head.asp -->
 
-	<title>*insert appropriate title*</title>
+	<title>Week1</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 	<link rel="stylesheet" type="text/css" href="csstemplate.css">
 	<!--  When you have a stylesheet you can uncomment the link element above and edit the href to suit your file system and 		point to your CSS sheet -->
