--- a/week2.html
+++ b/week2.html
@@ -26,7 +26,7 @@
   </tr>
   <tr>
     <td>Age</td>
-    <td>Young adult, student, or adult. More for people around 16 and 35 years old with knowledge.It can also be young parents who want to combat sexism in their education.</td> 
+    <td>Young adult, student, or adult. More for people around 16 and 45 years old with knowledge.It can also be young parents who want to combat sexism in their education. It's complicated to give a precise age because the aim is not to exclude the audience. What's more, there's no age limit for taking an interest in feminism. </td> 
   </tr>
   <tr>
     <td>Gender</td>
@@ -57,7 +57,7 @@
 		
 		<section id="task2">
     <h2>IL task 2 : Building an audience personas</h2>
-    <p>I decided to create 2 different personas. The age range of my audience profile is quite wide, which is why I chose 2 personas with an age gap. However, in terms of gender, I prefer to concentrate on female personas because I think that despite everything, this is a subject that will appeal more to women. However, I don't exclude men from my audience. </p>
+    <p>I decided to create 3 different personas. The age range of my audience profile is quite wide, which is why I chose 2 personas with an age gap. However, in terms of gender, I prefer to concentrate on female personas because I think that despite everything, this is a subject that will appeal more to women. However, I don't exclude men from my audience, it's why my third persona it's about a man. </p>
 		<h3>Persona 1</h3>
 		<ul>
     <p>My first persona focuses on a person who is interested in communication in general. </p>
@@ -108,7 +108,7 @@
   </tr>
 </table>
 <h3>Persona 2</h3>
-<p>my second persona focuses on a young mother who wants a more inclusive education.</p>
+<p>My second persona focuses on a young mother who wants a more inclusive education.</p>
 <table>
   <tr>
     <td>Name</td>
@@ -116,7 +116,11 @@
   </tr>
   <tr>
     <td>Age</td>
-    <td>34 years</td> 
+    <td>40 years</td> 
+  </tr>
+   <tr>
+    <td>Picture</td>
+    <td><img src="images/woman.jpg" alt="Rebecca Antoine" height="150"></td>
   </tr>
      <tr>
     <td>Gender</td>
@@ -132,7 +136,7 @@
   </tr>
   <tr>
     <td>Situation</td>
-    <td>Married wirh one child</td> 
+    <td>Married wirh 2 children : one girl and one boy.</td> 
   </tr>
    <tr>
     <td>Web habits</td>
@@ -148,25 +152,76 @@
   </tr>
      <tr>
     <td>Needs and attitude</td>
-    <td>She wants to buy toys for her daughter but would like to educate her in a more inclusive way. </td> 
+    <td>She wants to buy toys for her children but would like to educate them in a more inclusive way. </td> 
   </tr>
 </table>
 		</ul>
+<h3>Persona 3</h3>
+    <ul>
+    <p>My last one is the persona of a man because it's an audience not to be neglected </p>
+    <table>
+  <tr>
+    <td>Name</td>
+    <td>Oliver Brown</td> 
+  </tr>
+  <tr>
+    <td>Picture</td>
+    <td><img src="images/man.jpg" alt="Rebecca Antoine" height="150"></td>
+  </tr>
+  <tr>
+    <td>Age</td>
+    <td>30 years</td> 
+  </tr>
+     <tr>
+    <td>Gender</td>
+    <td>Male</td> 
+  </tr>
+  <tr>
+    <td>Location</td>
+    <td>Brimingham</td> 
+  </tr>
+    <tr>
+    <td>Occupation</td>
+    <td>Programmer</td> 
+  </tr>
+  <tr>
+    <td>Situation</td>
+    <td>Single with one child, a girl one.</td> 
+  </tr>
+   <tr>
+    <td>Web habits</td>
+    <td>go 1 hours/day on social media</td> 
+  </tr>
+     <tr>
+    <td>Quote</td>
+    <td>“Education is the passport to the future, for tomorrow belongs to thos who prepare for it today” - Malcom X</td> 
+  </tr>
+     <tr>
+    <td>Knowlege level</td>
+    <td>Graduate in computer scientist. He doesn't know a lot about feminism.</td> 
+  </tr>
+     <tr>
+    <td>Needs and attitude</td>
+    <td>After a discussion with his friends, he realised that children's games can be sexist, so he decided to find out more about the subject to avoid this for his daughter. </td> 
+  </tr>
+</table>
 		</section>
 	
 <section id="task3">
   <h2>IL task 3 : Exploring the audience needs in relation to design.</h2>
   <p>I think that the best methods for my subject is <a href="https://www.gov.uk/service-manual/agile-delivery/writing-user-stories"> "Writing user stories" </a> The aim of my site is to raise awareness of sexist toy advertising. That's why I'm going to write a story for each of my personas.who will be my actors, I'm also going to put forward why they would use the service, the narrative part, and the objective behind this use and research. </p>
       <li> Persona 1 : Rebecca needs to find an essay topic for the course. So she decides to concentrate on her subject of study, "advertising", and a societal problem, "sexism". So she searched the Internet for ideas to refine her subject. The site should help her find examples and create a problem and a thought process.</li>
-      <li>Persona 2 : Elizabeth is a mother who would like to give her daughter a genderless education. She has always found the pink and blue colours in toy shops sexist. So she did a search for inclusive toy brands. The site will enable her to analyse whether she is capable of recognising them and to discover non-sexist advertising that could be good for her daughter. </li>
+      <li>Persona 2 : Elizabeth is a mother who would like to give her children a genderless education. She has always found the pink and blue colours in toy shops sexist. So she did a search for inclusive toy brands. The site will enable her to analyse whether she is capable of recognising them and to discover non-sexist advertising that could be good for her daughter. </li>
+      <li>Persona 3 : Oliver is a young father who wants the best for his daughter. During a discussion with his friends, he realised the stereotypes that children's toys can transmit. He decided to find out more, as he knew very little about the subject. The site will enable him to evaluate his previous choices and understand what is and isn't sexist advertising. </li>
 <h2>IL task 4 : Updating your portfolio. </h2>
 <p> I used HTML and more specifically tables to add my analysis.</p>
 </section>
 <section id="task4">
 <h2>Lab task 1 : Identify and evaluate websites </h2>
 <p> I choosed a website about the same topic than me <a href="https://shequal.com.au"> shequal.com</a> To view the website correctly, here is a screen recording. </p>
-<video width='450' height="450" controls>
-  <source src="video/shequal.mov" type="video/mp4">
+  <iframe width="420" height="315"
+src="https://youtu.be/zykdGd7dd6w">
+</iframe>
 </video>
 <h3> The audience </h3>
 <p> You can clearly see on the home page what the website is about, in other words, equality in advertising. The representation of the "She" suggests that this site is aimed more at women. The aim of the site seems to be to educate people, as you can read on the web page where the collective's mission is clearly described: "It’s our mission to raise industry and public awareness, reinforce positive behaviours, and empower people to take action in shaping how women are represented in the stories we tell and consume." However, it is difficult to know what type of company this is. Especially when you look at the home page, which looks like a blog. The aim is to arouse curiosity, so there's a tab where you can contact the site's author for more information.</p>
@@ -176,12 +231,12 @@
 <li>The site is easy to understand, but nevertheless seems a little slow and the home page gives the impression of being a catch-all. </li>
 <li>The use of images is particularly important because the site deals with advertising. So there is a concrete illustration. In addition, the home page tries to highlight the brand's products. There is an audio podcast and an illustration of the book. </li>
 <img src="images/screen/podcast.jpeg" alt="she" height="300">
-<img src="images/screen/book.jpeg" alt="she" height="300">
+<img src="images/opti/book.jpg" alt="she" height="300">
 <h3> Contrast, repetition, alignement, proximity</h3>
 <p>The site seems to follow a clear graphic charter. However, there are two orange bars that are constant and can affect the user experience. The strong presence of coloured bands can make the titles a little blurred, but they are written in a large enough font to stand out. </p>
 <h3> Content design</h3>
 <p> The website deals with a specific subject and seems to present a relevant angle for the consumer. The content appears to be in-depth, particularly when you consider the book featured. However, the sources used are not highlighted. The site seems to emphasise a personal point of view. </p>
-  <img src="images/screen/book.jpeg" alt="she" height="300">
+  <img src="images/opti/book.jpg" alt="she" height="300">
 <h2>Lab task 2 : Consider your audience</h2>
 <p> Consider and make notes on how some of the features you examined might be suitable or unsuitable for your chosen audience. Try to adopt the mindset of one of your user personas and imagine how they might feel when interacting with the website. Consider and make notes on how some of the features you examined might be suitable or unsuitable for your chosen audience. Try to adopt the mindset of one of your user personas and imagine how they might feel when interacting with the website.</p>
 <p> The user will be presented with an advertisement and will have to choose between one of the two buttons below. Unfortunately, you can't use the buttons to carry out a survey, but I'd like to add an interactive aspect. With the site shown here, I have the impression that the consumer is simply a spectator being lectured. I'd like my site to provoke real reflection and questioning. </p>
