--- a/week3.html
+++ b/week3.html
@@ -4,7 +4,7 @@
 <head>
 	<!-- Use this section for your webpage metadata - more detail https://www.w3schools.com/html/html_head.asp -->
 
-	<title>Week 3</title>
+	<title>Week3</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 	<link rel="stylesheet" type="text/css" href="csstemplate.css">
 </head>
@@ -20,11 +20,20 @@
 		<img src="images/screen/button2.png" alt="sexist" height="100">
 <h2> IL task 2 : Incorporate the narrative plan into your portfolio </h2>
 <p>The overall story will therefore be one of questioning the consumer's ability to recognise what is sexist and what is not. </p>
+<p> I also use this article to create my storytelling : <a href="https://uxplanet.org/storytelling-elements-31b2a6a7e373">"Elements of Good Story Telling"</a></p>
+<li> Theme : highlight feminist and sexist advertisements regarding children's toy. </li>
+<li>Plot : analyze if the person can make a difference between a sexist and a feminist advertisement. </li>
+<li> Character : children and the advertsing. The first one because highlight the impact of sexism advertising on children can create a motivation to change the point of view. The second is a personification of advertising. They can be either sexist or feminist in personality.</li>
+<li> Dialogue : This is popular science for adults, so it's important not to be too childish, but to keep it simple so that everyone can understand. Moreover, I need to be careful to not to be too moralistic to avoid startling my audience. My message is that the consummer can change the society at some level, if they decide to give attention just to feminist advertising, the sexist ads can disapear. </li>
+<li> Decor : mauve tones for the colour of feminism and images or videos of children at play. </li>
+<li> Melody : I'd like to incorporate children's sounds to remind us of the theme during the interactions. </li>
+<li> Spectacle : creating surprise if the person answers incorrectly </li>
+
 <h2> Lab Task : Git Hub</h2> 
 		<p>It was my first time creating a GitHub project. The interface is a bit complicated to understand the first time but fortunately I followed the laboratory. 
 		I would still need to be careful to upload all the documents and not just one as I did for the first change.
 		As the project progressed, I found it easier and I understood the HTML code better, which gave me more confidence for the rest of the project.</p>
-		<img src="images/screen/Git.jpeg" alt="GitHub" height="100">
+		<img src="images/screen/Git.jpeg" alt="GitHub" height="300">
 		<p> My repository name is : "ebaugnie.github.io". So I uploaded all my documents to the git hub so that they would appear as a site. <a href="https://ebaugnie.github.io"> Git Hub link</a></p>
 
 	</div>
