--- a/week4.html
+++ b/week4.html
@@ -12,7 +12,7 @@
 <body>
 
 	<!-- begin the main section of the page-->
-	<div id="*Insert appropriate ID - this will not display on your website*">
+	<div id="week4">
 		<h1>Week 4</h1>
 		
 		<section id="task1">
@@ -23,7 +23,7 @@
 		<section id="task2">
 		<h2>Lab task 1 : create an external CSS sheet</h2>
 		<p> I've added the template to my folder </p>
-		<img src="images/screen/css.png" alt="folder" height="150">
+		<img src="images/screen/css.png" alt="folder" height="250">
 		<p> And here is my code for adding the CSS to the page : link rel="stylesheet" type="text/css" href="csstemplate.css" </p>
 		</section>
 		<section id="task3">
@@ -42,7 +42,8 @@
 		    <td><img src="images/screen/before.jpeg" alt="before" height="300"></td>
 		    <td><img src="images/screen/after.jpeg" alt="after" height="300"></td>
 		  </tr>
-		  <tr>
+		  </table>
+		</section>
 	</div>
 	<!-- end the main section of the homepage -->
 	<hr>	
