--- a/week7.html
+++ b/week7.html
@@ -4,7 +4,7 @@
 <head>
 	<!-- Use this section for your webpage metadata - more detail https://www.w3schools.com/html/html_head.asp -->
 
-	<title>*insert appropriate title*</title>
+	<title>week 7</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 	<link rel="stylesheet" type="text/css" href="csstemplate.css">
 </head>
@@ -12,7 +12,7 @@
 <body>
 
 	<!-- begin the main section of the page-->
-	<div id="*Insert appropriate ID - this will not display on your website*">
+	<div id="week 7">
 		<h1>Week 7</h1>
 		
 		<section id="task1">
@@ -58,22 +58,32 @@
 <img src="images/screen/gimp1.jpeg" alt="Analyse" height="200">
 <img src="images/screen/gimp2.jpeg" alt="Analyse" height="200">
 <img src="images/screen/gimp3.jpeg" alt="Analyse" height="200">
-<img src="images/screen/w7gimp.jpeg" alt="Analyse" height="200">
+<p>Unfortunately, I have trouble with Gimp's interface, which I find complicated and rather blurred. So for my image resolution I preferred to use 2 applications. I'm already used to using Lightroom and I'm more used to the interface, so that's why I prefer to use this application for my modifications. There is an example of modification that I made for one of the image in my website</p>
+<table>
+  <tr>
+    <td>Before</td>
+    <td>After</td> 
+  </tr>
+  <tr>
+    <td><img src="images/screen/book.jpeg" alt="she" height="200"></td>
+    <td><img src="images/opti/book.jpg" alt="she" height="200"></td>
+  </tr>
+</table>
+<p>Here's how I do it using LightRoom.</p>
+<li>1. I ask to the IA in Lightroom to enhance my image in high quality</li>
+<img src="images/screen/light1.jpeg" alt="Lightroom" height="300">
+<img src="images/screen/light2.jpeg" alt="Lightroom" height="300">
+<li>2. I modify the lighting and the effect </li>
+<img src="images/screen/light3.jpg" alt="Lightroom" height="400">
+<li>3. I record the photo, trying to get the best possible image quality. </li>
+<img src="images/screen/light4.jpeg" alt="Lightroom" height="350">
+<p>As the images were of poor quality and I didn't need to change the colourimetry, I decided to use the website : <a href="https://app.imagify.io/?status=success&utm_source=email_confirmation&utm_medium=email&utm_campaign=account_confirmation">Imagify </a> This site allows me to improve the quality but also to reduce the size of my images so that I don't have to deal with an update problem on my GitHub. So I analysed my website and all the images I could include. I created a folder with all the images I considered inferior to "passable". </p>
+<img src="images/screen/value.jpeg" alt="image quality" height="250">
+<img src="images/screen/ima.jpeg" alt="image quality" height="250">
+<p>For the annotations on my screenshots, like the image below, I used the <a href="https://www.canva.com">Canva application</a></p>
+<img src="images/screen/opti.png" alt="folder" height="250">
 </section>
-<section id="task4">
-		<h2>Lab task 2 - Exploring alternative options</h2>
-		<p>*Insert paragraph introducing and reflecting upon task. Don't forget to include any other links/multi-media elements would be appropriate to the task and your chosen design. Remember that you can use the <a href="review_of_useful_tags.html" target="_blank">review_of_useful_tags document</a>, <a href="https://www.w3schools.com/html/default.asp">W3schools</a> or our own research to help you find the tags you're looking for!*</p>
-		</section>
-		
-		<section id="task">
-		<h2>Personna</h2>
-		<p>*Insert paragraph introducing and reflecting upon task. Don't forget to include any other links/multi-media elements would be appropriate to the task and your chosen design. Remember that you can also use lists like this:*</p>
-		<ul>
-				<li>point 1</li>
-				<li>point 2</li>
-				<li>point 3</li>
-		</ul>
-		</section>
+
 		
 	</div>
 	<!-- end the main section of the homepage -->
