--- a/week8.html
+++ b/week8.html
@@ -26,54 +26,74 @@
 		<img src="images/screen/house3.png" alt="Analyse" height="250">
 		<p> I really liked the background music, which really added to the site. It's a horror universe and we have to link the objects in the house with the horror films in which they appeared. The background music is similar to horror music, which creates a special, more gripping atmosphere. 
 		What's more, as you navigate through the house, there are sound effects such as evil laughter, creaking doors and creaking stairs. These sound effects also add a real plus to the navigation and atmosphere. </p>
-		<ul>
-				<li>What is the audio used for: sound effects, ambient sound, background music, speech?</li>
-		</ul>
-<p> We can use audio to create an ambiance or to illustrate better what you say.</p>
-		<ul>
-				<li>Can you find evidence of audio used with intent, which enhances information comprehension, retention and appeal?</li>
-		</ul>
-		<p> We can use audio to create an ambiance or to illustrate better what you say.</p>
-		<ul>
-				<li>What advantages and caveats of audio use can you witness?</li>
-		</ul>
-		<p> We can use audio to create an ambiance or to illustrate better what you say.</p>
-		<ul>
-				<li>How is audio combined with other media (images, text, video) in order to enhance a multimedia production?</li>
-		</ul>
-		<p> We can use audio to create an ambiance or to illustrate better what you say.</p>
+		<p> So I decided to follow the example of the second example and choose background music with a link of my website. My Website talk about the advertising for children, one of my first idea is to find an audio with children at play. </p>
 		</section>
 		<section id="task2">
 		<h2>IL task 2 - Generate a portfolio of audio content</h2>
+		<p> Like I said before, my first idea is to find a background music with a link of my website. For me to be a children is like innocence and also happiest moment, it's why I search for a music with this ambiance.</p>
+		<p>I devide to use two types of sounds in my website. </p>
 		<ul>
-				<li>Create your own</li>
-				<li>Search audio database</li>
-		</ul>
+				<h3>Backroung music</h3>
+				<p> The goal here is to use a type of music who can remember childhood without to be too much for an adult. In fact, I need to saty focus on my audience. During my research, I used different website and search for a music with this type of following mood : feel good, positive, funny, happy. There are the following music I found : </p>
+				<li> On Soundcloud, I found a channel with freemusic created by <a href="https://soundcloud.com/fm_freemusic">Oleg Mazur </a> : </li>
+<audio controls>
+  <source src="audio/sunny mood.mp3" type="audio/mpeg">
+Your browser does not support the audio element.
+</audio>
+<p> This first one is a little too repetitive</p>
+<audio controls>
+  <source src="audio/happy_joyful_children.mp3" type="audio/mpeg">
+Your browser does not support the audio element.
+</audio>
+<li> On <a href="https://pixabay.com/fr/">Pixabay, </a> I researched : "happy children" and I found these musics : </li>
+<audio controls>
+  <source src="audio/kids-commercial.mp3" type="audio/mpeg">
+Your browser does not support the audio element.
+</audio>
+<audio controls>
+  <source src="audio/morning-funny-beat.mp3" type="audio/mpeg">
+Your browser does not support the audio element.
+</audio>
+<audio controls>
+  <source src="audio/playing-in-color.mp3" type="audio/mpeg">
+Your browser does not support the audio element.
+</audio>
+				<h3>Sounds effects</h3>
+<p>As my website is intended to be interactive, I took inspiration from The digital panda. When people click on the 'sexist' button, I want to play the sound of a child crying. When someone clicks on the 'feminist' button, I'd like to have a happy child. The objective here is not to have a sound if the person is good or not but that when they click on the button it creates emotions for them, in particular the fact of associating sexist advertising with something sad. </p>
 </section>
-<section id="task3">
-		<h2>Lab task 1 - Optimise your audio for Web Use</h2>
-				<h3>Step one : install and open Audacity</h3>
-<p> We can use audio to create an ambiance or to illustrate better what you say. So I analysed one of the websites listed on </p>
-
-				<h3>Step two : crop an audio file</h3>
-<p> We can use audio to create an ambiance or to illustrate better what you say.</p>
-				<h3>Step three : export optimised audio files</h3>
-<p> We can use audio to create an ambiance or to illustrate better what you say.</p>
+<section>
+<img src="images/screen/button2.png" alt="sexist" height="100">
+<p>I used the  <a href="https://sound-effects.bbcrewind.co.uk"> BBC website </a>  to find sound effects of children crying. Here are the 2 sounds I found: </p>
+<audio controls>
+  <source src="audio/bbc_baby-girl.mp3" type="audio/mpeg">
+Your browser does not support the audio element.
+</audio>
+<audio controls>
+  <source src="audio/bbc_babies-boy.mp3" type="audio/mpeg">
+Your browser does not support the audio element.
+</audio>
+<p><img src="images/screen/auda1.jpeg" alt="Audacity" height="300">
+<img src="images/screen/auda2.jpeg" alt="Audacity" height="300">
+<img src="images/screen/auda3.jpeg" alt="Audacity" height="300"></p>
+<p>There is the final sound effect for the sexist button</p>
+<audio controls>
+  <source src="audio/bbc_baby-girl-auda.mp3" type="audio/mpeg">
+Your browser does not support the audio element.
+</audio>
 </section>
-<section id="task4">
-		<h2>Lab task 2 - Exploring alternative options</h2>
-		<p>*Insert paragraph introducing and reflecting upon task. Don't forget to include any other links/multi-media elements would be appropriate to the task and your chosen design. Remember that you can use the <a href="review_of_useful_tags.html" target="_blank">review_of_useful_tags document</a>, <a href="https://www.w3schools.com/html/default.asp">W3schools</a> or our own research to help you find the tags you're looking for!*</p>
-		</section>
+<img src="images/screen/button1.png" alt="sexist" height="100">
+<p> Like I said, the goal is to associate sadness when the users click on "sexist" but when they click on "feminist" I want to create joy. It's why, I choosed an happy child. I didn't find a good sounds effect on  <a href="https://sound-effects.bbcrewind.co.uk"> BBC website </a>  so I used <a href="https://pixabay.com/fr/">Pixabay</a> and I found an interesting one : </p>
+<audio controls>
+  <source src="audio/child-ha-ha.mp3" type="audio/mpeg">
+Your browser does not support the audio element.
+</audio>
+<p> As I also found the sound effect too long, I cut it with Audacity in the same way as the previous sound. </p>
+<audio controls>
+  <source src="audio/child-ha-ha-auda.mp3" type="audio/mpeg">
+Your browser does not support the audio element.
+</audio>
 		
-		<section id="task">
-		<h2>Personna</h2>
-		<p>*Insert paragraph introducing and reflecting upon task. Don't forget to include any other links/multi-media elements would be appropriate to the task and your chosen design. Remember that you can also use lists like this:*</p>
-		<ul>
-				<li>point 1</li>
-				<li>point 2</li>
-				<li>point 3</li>
-		</ul>
-		</section>
+</section>
 		
 	</div>
 	<!-- end the main section of the homepage -->
