--- a/week5.html
+++ b/week5.html
@@ -49,7 +49,8 @@
   </tr>
   <tr>
   	<td>Parallelism</td>
-    <td>As you can see, there's a lot of repetition, so you're regularly reminded of the main subject. What's more, there's a parallel between one of the headings and the start of the paragraphs. <img src="images/screen/analyse.png" alt="Analyse" height="150">  </td> 
+    <td>As you can see, there's a lot of repetition, so you're regularly reminded of the main subject. What's more, there's a parallel between one of the headings and the start of the paragraphs.
+     <img src="images/screen/analyse.png" alt="Analyse" height="250">  </td>  
   </tr>
   <tr>
   	<td>Positive voice</td>
