--- a/week11.html
+++ b/week11.html
@@ -18,8 +18,8 @@
 		<section id="task1">
 		<h2>IL task 1 - Review of progress</h2>
 <p> I'm aware that I still need to improve my HMTL and CSS coding so that it looks more like a website than just a blog. What's more, I'm still having trouble with the video subtitles - it took me a while to work them out. I think I need to learn more about coding.</p>
-		
-
+<p>Some of my videos were too big, so I had to use a compressor to encode them in GitHub : <a href="https://clideo.com/fr/compress-video
+"> Clideo </a> 
 
 <h2>IL Task 2 - Working on your reflection </h2>
 
