--- a/week2.html
+++ b/week2.html
@@ -219,9 +219,8 @@
 <section id="task4">
 <h2>Lab task 1 : Identify and evaluate websites </h2>
 <p> I choosed a website about the same topic than me <a href="https://shequal.com.au"> shequal.com</a> To view the website correctly, here is a screen recording. </p>
-  <iframe width="420" height="315"
-src="https://youtu.be/zykdGd7dd6w">
-</iframe>
+<video width='320' height="180" controls>
+  <source src="video/SheEqual.mp4" type="video/mp4">
 </video>
 <h3> The audience </h3>
 <p> You can clearly see on the home page what the website is about, in other words, equality in advertising. The representation of the "She" suggests that this site is aimed more at women. The aim of the site seems to be to educate people, as you can read on the web page where the collective's mission is clearly described: "It’s our mission to raise industry and public awareness, reinforce positive behaviours, and empower people to take action in shaping how women are represented in the stories we tell and consume." However, it is difficult to know what type of company this is. Especially when you look at the home page, which looks like a blog. The aim is to arouse curiosity, so there's a tab where you can contact the site's author for more information.</p>
