--- a/week9.html
+++ b/week9.html
@@ -19,7 +19,7 @@
 		<h2>IL task 1 - Analyse the use of video on the web</h2>
 		<p>For my review, I analysed one of the websites listed on <a href="https://www.awwwards.com/websites/video/">Awwwards website </a> : <a href="https://www.arraisballet.com">Arras ballet,</a> created by Zeitler Design. </p>
 	<video width='320' height="180" controls>
-	<source src="video/ballet.mov" type="video/mp4">
+	<source src="video/ballet.mp4" type="video/mp4">
 	</video>
 		<p> As you can see, the website used a lot of videos. I really liked the way the video embedding started automatically. They seem to be used here to give more rhythm to the website but also to highlight the product on offer: classical dance lessons. Another advantage is that videos do not detract from the quality of the website.</p>
 		<h2>IL task 2 - Generate a portfolio of video content</h2>
